--- a/style.css
+++ b/style.css
@@ -1,31 +1,38 @@
 body{
-    margin: 0 auto;
-    width: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.elemntdiv{
-    background-color: white;
-    width: 1000px;
-    margin:0 auto;
-    padding: 30px;
-    margin-bottom: 200px;
+body,
+html {
+    height: 100%;
 }
 .chall{
-    width: 500px;
-    height: 500px;
-    background-color: rgb(255, 255, 255);
-    position: relative;
+    height: 250px;
+    width: 250px;
+    margin: 0 auto;
+    background-color: lime;
     animation-name: example;
-    animation-duration: 2s;
-    animation-delay: 1s;
+    animation-duration: 2.0s;
+    animation-timing-function: ease-out;
+    animation-direction: alternate;
     animation-iteration-count: infinite;
+    animation-play-state: running;
 }
 @keyframes example {
-    0%   {background-color:red; clip-path: circle(100% at 100% 100%);}
-    10%   {background-color:rgb(165, 230, 137); clip-path: circle(80% at 80% 80%);}
-    20%  {background-color:yellow; clip-path: circle(60% at 60% 60%);}
-    30%  {background-color:rgb(150, 35, 127); clip-path: circle(20% at 20% 00%);}
-    40%  {background-color:blue; clip-path: circle(80% at 80% 80%);}
-    50%  {background-color:green; width:150px; height: 150px;}
-    100% {background-color:red; width:300px; height: 300px;}
+       0% {
+                transform: scale(.5);
+                background-color: green;
+                border-radius: 100%;
+            }
+  
+            50% {
+                background-color: orange;
+            }
+  
+            100% {
+                transform: scale(2.0);
+                background-color: red;
+            }
   }
